--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,6 +1,8 @@
 .app {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
+  height: 100%;
   margin: 0 auto;
   max-width: 800px;
   padding: 0.5rem;
