--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,9 +1,28 @@
+.container {
+  height: 100%;
+}
+
 .app {
   box-sizing: border-box;
-  display: flex;
+  display: none;
   flex-direction: row;
   height: 100%;
   margin: 0 auto;
   max-width: 800px;
   padding: 0.5rem;
+
+  @media screen and (min-width: 550px) {
+    display: flex;
+  }
+}
+
+.mobile {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  @media screen and (min-width: 550px) {
+    display: none;
+  }
 }
