--- a/src/components/dilemma/dilemma.scss
+++ b/src/components/dilemma/dilemma.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.dilemma__main {
+  width: 300px;
+}
+
 .dilemma__status {
   font-size: 1.25rem;
   font-weight: bold;
@@ -54,5 +58,22 @@
     &:not([disabled]) {
       color: red;
     }
+  }
+}
+
+.dilemma__form {
+  border: 1px solid #aaa;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+
+  label {
+    font-size: 0.9rem;
+    margin-bottom: 0.1rem;
+  }
+
+  input {
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.25rem;
   }
 }
