--- a/src/components/dilemma/dilemma.scss
+++ b/src/components/dilemma/dilemma.scss
@@ -1,36 +1,16 @@
-@import '../../variables';
-
 .dilemma {
-  align-items: center;
-  border: 1px solid $grey;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: 0.5rem;
-  margin-right: 0.5rem;
-
-  h2 {
-    margin-bottom: 2rem;
-  }
-}
-
-.dilemma__intro {
-  margin-bottom: 2rem;
-  width: 100%;
-
-  p:first-child {
-  }
-}
-
-.dilemma__main {
-  width: 300px;
+  margin-bottom: 1rem;
 }
 
 .dilemma__status {
   font-size: 1.25rem;
   font-weight: bold;
-  margin-top: 0;
+  margin: 0 0 1rem 0;
   text-align: center;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .dilemma__choices {
@@ -40,7 +20,6 @@
 
 .dilemma__choice {
   flex-grow: 1;
-  font-family: monospace;
   font-weight: bold;
   padding: 0.5rem 1rem;
 
@@ -58,22 +37,5 @@
     &:not([disabled]) {
       color: red;
     }
-  }
-}
-
-.dilemma__form {
-  border: 1px solid #aaa;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-
-  label {
-    font-size: 0.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  input {
-    padding: 0.5rem 1rem;
-    margin-bottom: 0.25rem;
   }
 }
