--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 html, body, #root {
-  font-family: monospace;
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+html, body, button, input, select, option {
+  font-family: monospace;
 }
