--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -1,4 +1,12 @@
+@import '../../variables';
+
 .game {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.game__controls {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -12,7 +20,42 @@
   text-align: center;
 }
 
-.game__button {
+.game__remaining {
+  margin: 0 0 1rem 0;
+  text-align: center;
+}
+
+.game__reset {
   margin: 0 auto;
   width: 50%;
+}
+
+.game__reload {
+  margin: 0 auto;
+}
+
+.game__choices {
+  display: flex;
+  flex-direction: row;
+}
+
+.game__choice {
+  color: $grey;
+  flex-grow: 1;
+
+  &:first-child {
+    margin-right: 1rem;
+
+    &:not([disabled]) {
+      color: green;
+    }
+  }
+
+  &:last-child {
+    margin-right: 0;
+
+    &:not([disabled]) {
+      color: red;
+    }
+  }
 }
