--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -15,6 +15,14 @@
 
 .main__intro {
   margin-bottom: 2rem;
+
+  :first-child {
+    margin-top: 0;
+  }
+
+  :last-child {
+    margin-bottom: 0;
+  }
 }
 
 .main__donate {
