--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,28 +1,33 @@
-.container {
-  height: 100%;
-}
-
 .app {
   box-sizing: border-box;
-  display: none;
-  flex-direction: row;
-  margin: 0 auto;
-  max-width: 800px;
-  min-height: 100%;
-  padding: 0.5rem;
-
-  @media screen and (min-width: 550px) {
-    display: flex;
-  }
-}
-
-.mobile {
-  align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 0.5rem;
+
+  > :first-child {
+    flex-shrink: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  > :last-child {
+    max-height: 50vh;
+  }
 
   @media screen and (min-width: 550px) {
-    display: none;
+    flex-direction: row;
+    height: 100%;
+
+    > :first-child {
+      flex-shrink: 1;
+      margin-bottom: 0;
+      margin-right: 0.5rem;
+    }
+
+    > :last-child {
+      max-height: initial;
+      width: 200px;
+    }
   }
 }
