--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -10,13 +10,13 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 300px;
+  width: 280px;
 }
 
 .game__message {
   font-size: 1.25rem;
   font-weight: bold;
-  margin: 0 0 1rem 0;
+  margin: 0 0 0.5rem 0;
   text-align: center;
 }
 
@@ -57,5 +57,11 @@
     &:not([disabled]) {
       color: red;
     }
+  }
+}
+
+.game__choice--selected {
+  &:not([disabled]) {
+    text-decoration: underline;
   }
 }
