--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -18,6 +18,10 @@
   font-weight: bold;
   margin: 0 0 0.75rem 0;
   text-align: center;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .game__remaining {
